# ML

./: .gitignore  README.md  env_act.sh  main.py  pyproject.toml
.github/: copilot-instructions.md
data/cibilscore/: cibil.json  features_target_description.xlsx
fastapi/: main.py
notebooks/: breastcancer.ipynb  isl.ipynb  rainflow_prediciton.ipynb  runner.ipynb  tictactoe.ipynb
tictactoe/: README.md  game_logic.py  main.py  probabilities.py  pyproject.toml
tictactoe/.github/: copilot-instructions.md
tictactoe/static/: style.css  ui.js
tictactoe/templates/: index.html
